# DigitalWaterWayAssistanceTool

./: .gitignore  README.md  pyproject.toml
src/DigitalWaterWayAssistanceTool/: AssData.py  CHData.py  Crawl.py  GetData.py  Interface.py  Login.py  PassParam.py  SqlComm.py  class.json  class2.json  class3.json  filtered.json
src/DigitalWaterWayAssistanceTool/Test/: test.py  test1.py  test2.py  test3.py
src/DigitalWaterWayAssistanceTool/static/: index.css  index.js  index.less
src/DigitalWaterWayAssistanceTool/templates/: index.html
src/DigitalWaterWayAssistanceTool/运行处/: main_定时任务.py  sql.py  失常分析SQL.py  失常综合分析DB.py  失常通告DB.py  接口.py  数据导出.py  日报后台.py  标签监测SQL.py  水位完整率DB.py  水位数据分析DB.py  水位数据异常明细DB.py  水位数据整点缺失DB.py  水位正常率DB.py  水位站阈值DB.py  组织机构DB.py  统计时间.py  航标动态数据DB.py  航标器材配置DB.py  航标基础信息准确率DB.py  航标基础信息错误明细DB.py  航标基础数据DB.py  航标失常数据DB.py  航标报警历史DB.py  航标监测未覆盖明细DB.py  航标监测覆盖率DB.py  航标终端数据DB.py  航标调度任务DB.py  船舶基础信息DB.py  船舶轨迹查询.py  调度不合格明细DB.py  调度分析SQL.py  调度合格率DB.py
src/DigitalWaterWayAssistanceTool/运行处/数据库文件/: 基础数据.sql  检查结果.sql
