[tool.poetry]
name = "digitalwaterwayassistancetool"
version = "0.1.0"
description = ""
authors = ["cynric_ni <cynric_ni@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
requests = "^2.32.3"
pandas = "^2.2.3"
numpy = "^2.1.3"
pymysql = "^1.1.1"
bs4 = "^0.0.2"
ddddocr = {version = "^1.5.6",python=">=3.12,<3.13"}
urllib3 = "^2.2.3"
sqlalchemy = "^2.0.36"
schedule = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"